fixed bug that caused uneven button widths in the exam list page

--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -713,7 +713,13 @@ select {
   align-items: center;
 }
 
-.ca-btn.begin .material-icons {
+.ca-btn.resume {
+  padding: 0 12px 0px 12px;
+  display: flex;
+  align-items: center;
+}
+
+.ca-btn.resume .material-icons {
   font-size: 16px;
   margin-right: 8px;
 }
